# mirrorlab

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/: HANDOVER.md  blocker-consensus.md  blocker-fix-options.md  blocker-physics.md  blocker-trace.md  blueprint-xy-review-round1.md  blueprint-xy-review-round2.md  blueprint-xy.md  ceiling-data.json  d6-shift-catalog.md  d6-shift-catalog.zh.md  idea-design-notes.md  paper1-spec.md  paper1-spec.zh.md  program-overview.md  r1-physics-consistency.md  r2-red-team-audit.md  r3-prior-art-audit.md  r4-feasibility.md  r5-elegant-defense.md  sprint1-recon.md  sprint1-report.md  sprint2-report.md  sprint3-attacker-spec.md  sprint3-audit.md  sprint3-calibration.md  sprint3-report.md  sprint35-pilot-data.json  sprint35-report.md  sprint4-ceiling-report.md  sprint4-figure-captions.md  sprint4-paper-trail.md  sprint4-report.md  sprint4-sweep-data-gpt41.json  sprint4-sweep-summary-gpt41.md  sprint4-sweep-summary.md  story.md  team-briefing.md  v2-todo.md
docs/audits/: README.md  coulomb_d_5_1.md  coulomb_g_5_1.md  coulomb_g_5_2.md  damped_ho_d_3_1.md  damped_ho_g_3_1.md  damped_ho_g_3_2.md  decay_d_12_1.md  decay_g_12_1.md  decay_g_12_2.md  fluid_d_10_1.md  fluid_g_10_1.md  fluid_g_10_2.md  gravity_d_2_1.md  gravity_g_2_1.md  gravity_g_2_2.md  hooke_d_1_1.md  hooke_g_1_1.md  hooke_g_1_2.md  kinetics_d_11_1.md  kinetics_g_11_1.md  kinetics_g_11_2.md  optics_d_9_1.md  optics_g_9_1.md  (+13 more)
mirrorlab/: __init__.py
paper1/: Makefile  README.md  appendix.tex  main.aux  main.bbl  main.blg  main.out  main.tex  refs.bib
(+164 files in other folders)
