[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirrorlab"
version = "0.1.0"
description = "MirrorLab — counterfactual physics-discovery benchmark for LLM agents."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["mirrorlab*"]
exclude = ["tests*", "vendor*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
